@@ -1,5 +1,7 @@
 Changes with APR-util b1  
 
+  *) Rework and fix VPATH-build support.  [Justin Erenkrantz]
+
   *) Add support for Berkeley DB4.  [Justin Erenkrantz]
 
   *) Improve testdbm help.  [Justin Erenkrantz]
